# earned-understanding-battery

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements-m3.txt  requirements-m5.txt
governance/: phase-a-plus-sign-off-2026-03-21.md
outputs/: peer-review-data-package-generativity-complete-2026-03-21.md
protocol/: earned-understanding-battery-protocol-v2.0.md  generativity-instrument-protocol-v1.0.md
protocol/sections/: PROGRESS.md
reproducibility/: README.md  requirements-v3.txt
results/: harmonised_results.json  null_distribution_raw_samples.csv  pc-se-pcint-direct-calibration.json  per-instrument-roc-auc.json  perturbation_audit.json  perturbation_audit_v2.json
results/calibration/: 2A_medium_123.json  2A_medium_42.json  2A_medium_456.json  3C_medium_123.json  3C_medium_42.json  3C_medium_456.json  M3_CALIBRATION_REPORT.md  (+2 more)
scripts/: blender_animation.py  create_heatmap.py  export_t109_csv.py  extract_traversal_data.py  f022_standalone_verification.py  manim_3b.py  manim_3c.py  reprocess_thresholds_t109.py  reproduce_v3_tables.py  run_1a_large_battery.py  run_b0_and_autocorrelation.py  run_calibration.py  run_graph_native_behavioural.py  run_harmonised_generativity.py  run_m3_calibration.py  run_m5_calibration.py  run_m5_recalibration.py  run_multiscale_behavioural.py  run_perturbation_audit.py  setup_m3.sh  setup_m5.sh
tests/: test_battery.py  test_core.py  test_domain_verification.py  test_domains.py  test_foxworthy_cross_validation.py  test_hebbian_walker.py  test_instruments.py  test_integration_diagnostics.py
(+99 files in other folders)
