[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "earned-understanding-battery"
version = "0.1.0"
description = "Earned Understanding Battery — framework-agnostic test suite for Class 4 candidacy"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "numpy>=1.24,<3.0",
    "scipy>=1.10",
    "networkx>=3.0",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
class1 = [
    "nltk>=3.8",
]
class2 = [
    "torch>=2.3,<3.0",
    "transformers>=4.40",
    "torch-geometric>=2.5",
]
class3 = [
    "torch>=2.3,<3.0",
    "gymnasium>=0.29.1,<1.3.0",
    "stable-baselines3>=2.7,<3.0",
    "sb3-contrib>=2.7,<3.0",
    "peft>=0.10",
    "transformers>=4.40",
]
analysis = [
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "pandas>=2.0",
]
all = [
    "earned-understanding-battery[class1,class2,class3,analysis]",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
